force-app/main/default/objects/AM_Enrollment__c/fields/AM_Course__c.field-meta.xml
<CustomField>
    <fullName>AM_Course__c</fullName>
    <label>Course</label>
    <referenceTo>AM_Course__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>