force-app/main/default/objects/AM_Enrollment__c/fields/AM_EnrollmentID__c.field-meta.xml
<CustomField>
    <fullName>AM_EnrollmentID__c</fullName>
    <displayFormat>E-{0000}</displayFormat>
    <label>Enrollment ID</label>
    <type>AutoNumber</type>
</CustomField>