force-app/main/default/objects/AM_Enrollment__c/fields/AM_Student__c.field-meta.xml
<CustomField>
    <fullName>AM_Student__c</fullName>
    <label>Student</label>
    <referenceTo>AM_Student__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>