force-app/main/default/objects/AM_Enrollment__c/fields/Enrollement_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollement_Date__c</fullName>
    <formula>IF(
    ISPICKVAL(AM_Status__c, &apos;Enrolled&apos;),
    TODAY(),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollement Date</label>
    <type>Date</type>
</CustomField>